@@ -127,6 +127,17 @@ class RemoteOpenpayTest < Test::Unit::TestCase
     assert_success @gateway.unstore(customer_stored.authorization)
   end
 
+  def test_successful_verify
+    response = @gateway.verify(@credit_card, @options)
+    assert_success response
+  end
+
+  def test_unsuccessful_verify
+    response = @gateway.verify(@declined_card, @options)
+    assert_failure response
+    assert_match /The card is not supported/, response.message
+  end
+
   def test_invalid_login
     gateway = OpenpayGateway.new(
       key: '123456789',
