@@ -40,6 +40,7 @@
 * Map test_mode_live_card code to new standard error code [berkcaputcu]
 * Elavon: Pass customer_number correctly [duff]
 * Stripe: add SG to supported_countries attribute [timbeiko]
+* Openpay: Add support for verify [duff]
 
 == Version 1.59.0 (May 18, 2016)
 * Orbital: Allow AVS parts to be sent sans country [duff]
